--- a/templates/conventions/calculette_loyer.html
+++ b/templates/conventions/calculette_loyer.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner fr-mb-8w">
         {# Main title & optionnal CTAs #}
-        <div class="fr-container">{% include "./_partial/header.html" %}</div>
+        <div class="fr-container">{% include "./_partial/search_header.html" %}</div>
         {% include "./_partial/tabs.html" %}
     </div>
 
