--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -18,7 +18,7 @@
 {% block content %}
     {% if total_conventions > 0 %}
         <div class="fr-container-fluid ds_banner">
-            <div class="fr-container">{% include "./_partial/header.html" %}</div>
+            <div class="fr-container">{% include "./_partial/search_header.html" %}</div>
             <div class="fr-container-fluid">{% include "./_partial/tabs.html" %}</div>
         </div>
 
