Adapter la recherche de conventions par onglet - S775 - S900 (#803)
* Create SearchServices & replace ConventionListService

* Improve search service autonomy

* WIP - prevent error

* WIP

* Add django stubs + type authenticated request (cf https://pypi.org/project/django-stubs/)

* wip

* Fix results

* Add partials

* Fix pagination

* Refactor template to reduce duplicate code

* Fix missing variables for loyer computer

* PR review

* Fix pagination and filters

* Fix dependency error

* dev requirements

* Migration

* Revert typo

* Fix redirect test

* WIP

* Reverse active logic in template

* Add cryptography dependency

* TMP - improve code quality

* Refacto

* TMP - add dynamic views url

* fix filters

* Fix filters

* Fix filters

* Fix filters

* Refactor

* Add test for avenants

* Improve avenants coverage

* add tests

* WIP

* Add basic tests

* Fix choices in search views

* Feedback

* Remove useless function

* Fix order by

* Rename partial

* Feedback

* test tabs

* test tabs

---------

Co-authored-by: Fabien Le Frapper <contact@fabienlefrapper.me>

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -5,8 +5,8 @@
         <div class="fr-grid-row fr-grid-row--gutters">
             <div class="fr-col-md-12 fr-mb-2w">
                 <form class="fr-mt-2w" method="get" action="" id="search_table">
-                    <input type="hidden" id="order_by" name="order_by" value="{{conventions.order_by}}">
-                    <input type="hidden" id="page" name="page" value="{{conventions.page}}">
+                    <input type="hidden" id="order_by" name="order_by" value="{{ order_by }}">
+                    <input type="hidden" id="page" name="page" value="{{ page }}">
                     {# Champs de recherche spécifiques (dépend du rôle de l'utilisateur) #}
                     <div class="fr-grid-row fr-grid-row--gutters">
                         {# Champs bailleur #}
@@ -46,7 +46,6 @@
 
                         {# Champs administration #}
                         {% if administration_query %}
-
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
                                 <div class="">
                                     {% url 'users:search_administration' as search_administration_url %}
@@ -82,13 +81,13 @@
 
                         {# Champs commune #}
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
-                            <input class="fr-input" placeholder="Commune" type="text" name="ville" value="{{ conventions.ville|default_if_none:"" }}" />
+                            <input class="fr-input" placeholder="Commune" type="text" name="ville" value="{{ request.GET.ville }}" />
                         </div>
 
                         {# Champs département (réservé aux utilsiateurs staff) #}
                         {% if request.user.is_staff %}
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
-                                <input class="fr-input" placeholder="Département" type="text" name="departement_input" value="{{ conventions.departement_input|default_if_none:"" }}" />
+                                <input class="fr-input" placeholder="Département" type="text" name="departement_input" value="{{ request.GET.departement_input }}" />
                             </div>
                         {% endif %}
 
@@ -98,10 +97,10 @@
                             <div class="">
                                 <select class="fr-select" id="cstatut" name="cstatut">
                                     <option value="">Statut</option>
-                                    {% for statut in statuts %}
-                                        <option value="{{ statut.0 }}"
-                                            {% if statut.0  == conventions.statut.name %}selected{% endif %}>
-                                            {{ statut.1 }}
+                                    {% for value, label in statuts %}
+                                        <option value="{{ label }}"
+                                            {% if label == request.GET.cstatut %}selected{% endif %}>
+                                            {{ label }}
                                         </option>
                                     {% endfor %}
                                 </select>
@@ -110,13 +109,12 @@
                         {# Champs financement #}
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                             <div class="">
-
                                 <select class="fr-select" name="financement">
                                     <option value="">Financement</option>
-                                    {% for financement in financements %}
-                                        <option value="{{ financement.value }}"
-                                            {% if financement.value  == conventions.financement_filter %}selected{% endif %}>
-                                            {{ financement.label }}
+                                    {% for value, label in financements %}
+                                        <option value="{{ label }}"
+                                            {% if value == request.GET.financement %}selected{% endif %}>
+                                            {{ label }}
                                         </option>
                                     {% endfor %}
                                 </select>
@@ -125,14 +123,14 @@
 
                         {# Champs "Libre" (code opération / numéro de convention, code postal ou nom du programme) #}
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <input class="fr-input" placeholder="{% if active %}Code{% else %}N° convention{% endif %}, programme ou code postal" type="search" id="search_input" name="search_input" value="{{ conventions.search_input }}" />
+                            <input class="fr-input" placeholder="{% if active %}Code{% else %}N° convention{% endif %}, programme ou code postal" type="search" id="search_input" name="search_input" value="{{ search_input }}" />
                         </div>
 
                         {# Champs ANRU #}
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                             <div class="fr-fieldset__element">
                                 <div class="fr-checkbox-group fr-checkbox-group--sm">
-                                    <input name="anru" id="checkbox-restrict-to-anru" type="checkbox" {% if conventions.anru %}checked{% endif %}>
+                                    <input name="anru" id="checkbox-restrict-to-anru" type="checkbox" {% if request.GET.anru %}checked{% endif %}>
                                     <label class="fr-label" for="checkbox-restrict-to-anru">
                                         ANRU
                                         <span class="fr-hint-text">N'afficher que les conventions ANRU</span>
@@ -203,11 +201,11 @@
                         </div>
                     </div>
                 </details>
-                {% if conventions.paginated_conventions %}
+                {% if filtered_conventions_count > 0 %}
                     <div class="fr-table fr-table--bordered table--layout-fixed">
                         <table aria-label="Conventions">
-                            {% if conventions.paginated_conventions.paginator.count != conventions.total_conventions %}
-                                <caption><em>{{ conventions.paginated_conventions.paginator.count }} convention{{ conventions.paginated_conventions.paginator.count|pluralize }} correspond{{ conventions.paginated_conventions.paginator.count|pluralize:'ent' }} à votre recherche</em></caption>
+                            {% if filtered_conventions_count != all_conventions_count %}
+                                <caption><em>{{ filtered_conventions_count }} convention{{ all_conventions_count|pluralize }} correspond{{ filtered_conventions_count|pluralize:'ent' }} à votre recherche</em></caption>
                             {% endif %}
                             <thead>
                                 <tr class="th_inline">
@@ -244,8 +242,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for convention in conventions.paginated_conventions %}
-
+                                {% for convention in conventions %}
                                     <tr id="convention_redirect_{{convention.uuid}}" class="clickable {% if convention|display_redirect_project and not convention.is_avenant %}project{% elif convention|display_redirect_sent %}sent{% elif convention|display_redirect_post_action and not convention.is_avenant %}signed{% endif %}">
                                         <td title="{{convention.statut_for_template.statut_display}}">
                                             {% include "conventions/home/statut_tag.html"  %}
@@ -269,7 +266,7 @@
                                             </script>
                                         </td>
                                         {% if request|is_instructeur %}
-                                            <td>{{convention.programme.bailleur|highlight:conventions.search_input}}</td>
+                                            <td>{{convention.programme.bailleur|highlight:search_input}}</td>
                                         {% endif %}
                                         {% if request|display_administration %}
                                             <td>{{convention.programme.administration}}</td>
@@ -277,32 +274,32 @@
                                         <td>
                                             <div class="apilos--flex-row-left-center">
                                                 <strong class="apilos--overflow_ellipsis">
-                                                    {{convention.programme|highlight:conventions.search_input}}
+                                                    {{convention.programme|highlight:search_input}}
                                                 </strong>
                                                 {% if convention.is_avenant %}
                                                     <span class="text-title-blue-france fr-p-1w fr-ml-1w apilos-tag-avenant background-white">Avenant</span>
                                                 {%endif%}
                                             </div>
-                                            {% if active or siap_operation and convention.programme.numero_galion %}
+                                            {% if not active or siap_operation and convention.programme.numero_galion %}
                                                 <em data-test-role="programme-galion-cell">
-                                                    {{convention.programme.numero_galion|highlight:conventions.search_input}}
+                                                    {{convention.programme.numero_galion|highlight:search_input}}
                                                 </em>
                                             {% endif %}
-                                            {% if not active and convention.numero %}
+                                            {% if active and convention.numero %}
                                                 {% if convention.is_avenant %}
-                                                    <em data-test-role="programme-galion-cell">{{convention.parent.numero|highlight:conventions.search_input}} - Avenant n°{{convention.numero}}</em>
+                                                    <em data-test-role="programme-galion-cell">{{convention.parent.numero|highlight:search_input}} - Avenant n°{{convention.numero}}</em>
                                                 {% else %}
-                                                    <em data-test-role="programme-galion-cell">{{convention.numero|highlight:conventions.search_input}}</em>
+                                                    <em data-test-role="programme-galion-cell">{{convention.numero|highlight:search_input}}</em>
                                                 {% endif %}
                                             {% endif %}
                                         </td>
                                         <td data-test-role="programme-financement-cell">{{convention.financement}}</td>
                                         <td>
-                                            <strong>{{convention.programme.ville|highlight:conventions.search_input}}</strong><br/>
-                                            <em>{{convention.programme.code_postal|highlight:conventions.search_input}}</em>
+                                            <strong>{{convention.programme.ville|highlight:search_input}}</strong><br/>
+                                            <em>{{convention.programme.code_postal|highlight:search_input}}</em>
                                         </td>
                                         <td>{{convention.lot.nb_logements}}</td>
-                                        {% if active or siap_operation %}
+                                        {% if not active or siap_operation %}
                                             <td>{{convention.programme.date_achevement_compile|date:"d F Y"|default_if_none:'-' }}</td>
                                         {% else %}
                                             <td>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-' }}</td>
@@ -312,7 +309,7 @@
                             </tbody>
                         </table>
                     </div>
-                    {% include 'common/table/pagination.html' with paginate_list=conventions.paginated_conventions %}
+                    {% include 'common/table/pagination.html' with paginate_list=conventions %}
 
                 {% else %}
                     <p>Aucune convention ne correspond à votre recherche...</p>
