--- a/templates/conventions/calculette_loyer.html
+++ b/templates/conventions/calculette_loyer.html
@@ -9,54 +9,8 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner fr-mb-8w">
         {# Main title & optionnal CTAs #}
-        <div class="fr-container">
-            <div class="fr-grid-row fr-mt-2w fr-grid-row--gutters">
-                <div class="fr-col-12 fr-my-3w block--row-strech fr-grid-row--middle">
-                    {% if request|is_bailleur %}
-                        <div class="block--row-strech-1">
-                            <h1 class="m-0">Conventions et avenants</h1>
-                        </div>
-                        {% if not CERBERE_AUTH and not request.user.is_staff %}
-                            <div class="fr-mr-3w">
-                                <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection' %}">
-                                    Créer une nouvelle convention
-                                </a>
-                            </div>
-                        {% endif %}
-                        {% if not request.user.is_staff %}
-                            <div>
-                                <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
-                                    <span class="fr-icon-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                                </a>
-                            </div>
-                        {% endif %}
-                    {% elif request|is_instructeur or request.user.is_superuser %}
-                        <div class="block--row-strech-1">
-                            <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
-                            <p class="apilos-subtitle">{{total_conventions}} convention{{ total_conventions|pluralize }} liée{{ total_conventions|pluralize }} à votre administration trouvée{{ total_conventions|pluralize }} dans APiLos</p>
-                        </div>
-                    {% else %}
-                        <p class="fr-mb-3w">Votre profil n'est pas bien configuré, merci de vous rapprocher de votre instructeur</p>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-        {# Navigation tabs #}
-        <div class="fr-container-fluid">
-            <div class="fr-tabs fr-col-12">
-                <div class="fr-container">
-                    <ul class="fr-tabs__list" role="tablist" aria-label="Liste des conventions">
-                        {% include 'conventions/home/_tab.html' with tab_active=false count=nb_active_conventions label='en cours' title='Conventions en cours' route='conventions:search_active' %}
-                        {% include 'conventions/home/_tab.html' with tab_active=false count=nb_completed_conventions label='finalisées' title='Conventions finalisées' route='conventions:search_completed' %}
-                        <li class="fr-ml-md-auto">
-                            <div class="fr-tabs__tab" aria-selected="true">
-                                <span aria-hidden="true" class="fr-icon-equalizer-fill"></span> Calculatrice de loyers
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        <div class="fr-container">{% include "./_partial/search_header.html" %}</div>
+        {% include "./_partial/tabs.html" %}
     </div>
 
     {# Page's actual inner content #}
