--- a/templates/conventions/home/_tab.html
+++ b/templates/conventions/home/_tab.html
@@ -1,12 +1,12 @@
-{% if tab_active %}
+{% if tab.url == request.path %}
     {# If tab is currently open, no link needed #}
     <li>
-        <div class="fr-tabs__tab" aria-selected="true">{{ count }} convention{% if count > 1 %}s{% endif %} {{ label }}</div>
+        <div class="fr-tabs__tab" aria-selected="true">{{ tab.count }} {{ tab.title }}</div>
     </li>
 {% else %}
     <li>
-        <a class="fr-tabs__tab" href="{% url route %}?{{ request.GET|to_query_params }}" title="{{ title }}" aria-selected="false" >
-            <span class="fr-link">{{ count }} convention{% if count > 1 %}s{% endif %} {{ label }} </span>
+        <a class="fr-tabs__tab" href="{{ tab.url }}?{{ request.GET|to_query_params }}" title="{{ tab.title }}" aria-selected="false" >
+            <span class="fr-link">{{ tab.count }} {{ tab.title }}</span>
         </a>
     </li>
 {% endif %}
