--- a/templates/conventions/actions/update_administration.html
+++ b/templates/conventions/actions/update_administration.html
@@ -1,13 +1,5 @@
 {% load custom_filters %}
-{% if not request|is_bailleur %}
-    {% comment %}
-Si la conditionnelle ci-dessus devait être supprimée, il faudra veiller que la modale
-ci-dessous ne s'ouvre pas par erreur en cas d'ouverture d'une autre modale.
-
-Il en existe en effet une sur le formulaire bailleur pour éditer le numéro d'opération d'une
-convention qui n'en aurait pas encore.
-À l'ouverture de celle-ci, la modale de modification de l'administration s'ouvre accidentellement.
-    {% endcomment %}
+{% if request.user.is_superuser %}
     <div class="fr-col-12 fr-mb-5w fr-mt-3w">
         <p class="fr-alert__title">Modifier l'administration</p>
         <div class="block--row-strech">
