add active siap habilitation in an hidden div to be able to inspect it

--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -55,4 +55,10 @@
             </div>
         </div>
     </div>
+    <div hidden>
+        {{request.user.siap_habilitation}}<br>
+        INSTRUCTEUR : {{request.user.is_instructeur}}<br>
+        BAILLEUR : {{request.user.is_bailleur}}<br>
+        CERBERE : {{request.user.is_cerbere_user}}<br>
+    </div>
 </footer>
