--- a/static/css/main.css
+++ b/static/css/main.css
@@ -973,3 +973,7 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
 .apilos-warning-band {
   background: #fef4ef;
 }
+
+.hidden {
+  display: none;
+}
