--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -55,4 +55,9 @@
             </div>
         </div>
     </div>
+    {% if CERBERE_AUTH %}
+        <div class="hidden" id="debug_siap_habilitation">
+            {{request.user.siap_habilitation}}
+        </div>
+    {% endif %}
 </footer>
