--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -30,14 +30,20 @@
                         </strong>
                     </div>
                     <div class="fr-col-12 fr-col-lg-6">
-                        <div>{{bailleur.adresse}}</div>
+                        {% if bailleur.adresse %}
+                            <div>{{bailleur.adresse}}</div>
+                        {% endif %}
                         <div>
-                            {{bailleur.code_postal}} {{bailleur.ville}}
+                            {% if bailleur.code_postal %}{{bailleur.code_postal}}{% endif %}&nbsp;
+                            {% if bailleur.ville %}{{bailleur.ville}}{% endif %}
                         </div>
                     </div>
                     <div class="fr-col-12 fr-col-lg-6">
-                        <div class="fr-col-12">SIRET : {{bailleur.siret}}</div>
-                        <div class="fr-col-12">Capital social : {{bailleur.capital_social}}</div>
+
+                        <div class="fr-col-12">{% if bailleur.nature_bailleur == NATURE_BAILLEUR.PRIVES %}Email{% else %}SIRET{% endif %} : {{bailleur.siret}}</div>
+                        {% if bailleur.capital_social %}
+                            <div class="fr-col-12">Capital social : {{bailleur.capital_social}}</div>
+                        {% endif %}
                     </div>
                     <hr class="fr-col-12 fr-my-3w">
                     {% if upform.bailleur.field.choices|length > 1 or upform.errors %}
