--- a/templates/operations/conventions.html
+++ b/templates/operations/conventions.html
@@ -21,8 +21,7 @@
                         </div>
                     </div>
                 {% endif %}
-
-                {% include "conventions/convention_list.html" with siap_operation=True %}
+                {% include "conventions/convention_list.html" %}
             </div>
         </div>
     </div>
