Typo and text about clause de mixité sociale

--- a/templates/conventions/common/form_logements.html
+++ b/templates/conventions/common/form_logements.html
@@ -156,7 +156,7 @@
 </div>
 
 {% if convention.mixity_option %}
-    <h4>Option de l'article sur la close de mixité sociale</h4>
+    <h4>Option de l'article sur la clause de mixité sociale</h4>
 
     <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-12 fr-mb-2w">
