--- a/templates/conventions/home/bailleur_no_convention.html
+++ b/templates/conventions/home/bailleur_no_convention.html
@@ -51,15 +51,15 @@
     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center fr-mb-5w">
         <div class="fr-col-12">
             <div class="fr-alert fr-alert--info">
-                <p>Vous pouvez créer un brouillon de convention
+                <p>Vous pouvez créer un projet de convention ANRU
                     avant d'avoir réuni l'ensemble de ces documents
                 </p>
             </div>
         </div>
     </div>
     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center fr-mb-5w">
-        <a class="fr-btn" href="{% url 'conventions:selection' %}">
-            <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Je suis prêt à commencer ma convention
+        <a class="fr-btn" href="{% url 'conventions:new_convention' %}">
+            <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Je suis prêt à commencer ma convention ANRU
         </a>
     </div>
 </div>
