Fix de la liste des avenants

--- a/templates/conventions/avenant_list.html
+++ b/templates/conventions/avenant_list.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
-{% if conventions.paginated_conventions %}
-    {% for convention in conventions.paginated_conventions %}
+{% if conventions %}
+    {% for convention in conventions %}
         <div class="fr-grid-row">
             <div class="apilos-step-post-action fr-mr-2w">
                 <div class="apilos-step-post-action--bubble fr-mr-2w"></div>
